--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </section>
     <section class="image">
       <div class="background-image">
-        <img src="images/photo1.png" alt="">
+        <img src="images/photo1.png" alt="Interior">
       </div>
       <div class="card">
         <div class="profile">
